# invokerai

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DISTRIBUTION.md  HOOK-ENFORCEMENT-RESEARCH.md  README.md  install.py  migrate.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor/: mcp.json
.github/copilot/: mcp.json
.github/workflows/: publish.yml  test.yml
agent_invoker/: __init__.py  classifier.py  cli.py  core.py  mcp_server.py  setup_editors.py  tools.py
agent_invoker/registry/: __init__.py  agents.json  loader.py
agents/: accessibility-tester.md  agent-installer.md  agent-organizer.md  ai-writing-auditor.md  api-designer.md  architect-reviewer.md  architecture.md  backend-developer.md  backend.md  blockchain-security-auditor.md  business-analyst.md  cloud-architect.md  code-review.md  code-reviewer.md  codebase-onboarding-engineer.md  competitive-analyst.md  compliance-auditor.md  content-marketer.md  context-manager.md  data-analyst.md  data-engineer.md  data-scientist.md  data.md  database-administrator.md  database-optimizer.md  database.md  debugger.md  devops.md  django-developer.md  documentation-engineer.md  documentation.md  dx-optimizer.md  error-detective.md  expo-react-native-expert.md  fastapi-developer.md  fintech-engineer.md  frontend-developer.md  frontend.md  fullstack-developer.md  git-workflow-manager.md  (+43 more)
agents/backend/: go.md  node.md  php.md  python.md  typescript.md
agents/backend/php/: laravel.md  symfony.md
agents/backend/python/: django.md  fastapi.md
agents/database/: postgres.md
agents/devops/: git.md  kubernetes.md
agents/frontend/: react.md  typescript.md
agents/ml/: llm.md  training.md
agents/mobile/: react-native.md  swift.md
agents/mobile/react-native/: expo.md
docs/: api-reference.md  hooks-guide.md  migration-guide.md
homebrew/Formula/: invokerai.rb
npm/: package.json
scripts/: build_router.py  trace_example.py
skills/invokerai/: SKILL.md
tests/: conftest.py  test_cli.py  test_core.py  test_mcp_server.py  test_migrate.py  test_routing.py  test_setup_editors.py
